Fixed the opacity on the Gnome-terminal and Rofi

--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -125,13 +125,15 @@ alpha-step = 0.06;
 # Blur background of opaque windows with transparent frames as well.
 # blur-background-frame = true;
 # Do not let blur radius adjust based on window opacity.
+inactive-dim=0.2;
+blur-background = true;
 blur-background-fixed = true;
 blur-background-exclude = [
     "window_type = 'dock'",
     "window_type = 'desktop'"
 ];
-opacity-rule = [ "80:class_g = 'Gnome-terminal'" ];
-# opacity-rule = [ "80:class_g = 'Rofi'" ];
+opacity-rule = [ "90:class_g *= 'Gnome-terminal'" ];
+opacity-rule = [ "90:class_g *= 'Rofi'" ];
 
 #################################
 #
